apply plugin: 'com.android.application'
apply plugin: 'org.robolectric'
apply plugin: 'jacoco'
apply plugin: 'sonar-runner'

android {
    compileSdkVersion 22
    buildToolsVersion "22.0.1"

    defaultConfig {
        applicationId "net.wincher.winchrandroid"
        minSdkVersion 15
        targetSdkVersion 22
        versionCode 1
        versionName "1.0"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        debug {
            minifyEnabled false
            debuggable true
            testCoverageEnabled = true
        }
    }

    dexOptions {
        javaMaxHeapSize "4g"
    }
    lintOptions {
        abortOnError false
        disable 'InlinedApi', 'AllowBackup'
    }

    // These excludes allow the JAR libraries to build as the META-INF folders of pure java projects
    // are not automatically excluded correctly from builds and will cause build errors when
    // multiple
    // JAR dependencies are built with a META-INF folder in the classpath.
    packagingOptions {
        exclude 'META-INF/DEPENDENCIES.txt'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/notice.txt'
        exclude 'META-INF/license.txt'
        exclude 'META-INF/dependencies.txt'
        exclude 'META-INF/LGPL2.1'
        exclude 'META-INF/ASL2.0'
        exclude 'META-INF/ASL2.0.txt'
        exclude 'LICENSE.txt'
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_7
        targetCompatibility JavaVersion.VERSION_1_7
    }
}

dependencies {
    // Dependencies supplied as provided and should be maintained in any project which uses the
    // module.
    compile(
            [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.4.1'],
            [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.4.1'],
            [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.4.1.1']
    )
    compile('com.squareup.okhttp:okhttp:2.4.0')
    compile 'org.apache.commons:commons-lang3:3.0'
    compile 'com.android.support:appcompat-v7:22.2.0'

    testCompile 'org.skyscreamer:nevado:1.3.2'
    testCompile('org.mockito:mockito-core:1.9.5') {
        exclude module: 'hamcrest-core'
    }
    testCompile('com.squareup.okhttp:mockwebserver:2.4.0')
    testCompile "org.robolectric:robolectric:3.0-rc2"
}

robolectric {
    // Configure the set of classes for JUnit tests
    include '**/*Test.class'
    include '**/*Test.java'
    exclude '**/*Steps.class'
    exclude '**/*Scenarios.class'
    exclude '**/*Helpers.class'
    exclude '**/*Reporter.class'
    exclude '**/*Adapter.class'
    exclude '**/*Utils.class'
    exclude '**/*Builder.class'
    exclude '**/*Environment.class'
    exclude '**/*Loader.class'
    exclude '**/espresso/**/*.class'

    // configure max heap size of the test JVM
    maxHeapSize = '2048m'

    // configure the test JVM arguments
    jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'

    // Specify max number of processes (default is 1) Not available until gradle plugin release 0.14
    //maxParallelForks = 4

    // Specify max number of test classes to execute in a test process
    // before restarting the process (default is unlimited)
    // Not available until gradle plugin release 0.14
    //forkEvery = 150

    // configure whether failing tests should fail the build
    //ignoreFailures true

    // use afterTest to listen to the test execution results
    afterTest { descriptor, result ->
        println "Executing test for ${descriptor.name} with result: ${result.resultType}"
    }
}